# jarvis_leaderboard

./: .gitignore  flake.nix
.github/workflows/: nixrun.yml  runnix.yml
jarvis_leaderboard/contributions/ElemNet1-reprod0/: default.nix  pyproject.toml
jarvis_leaderboard/contributions/ElemNet1-reprod0/src/: run.py
jarvis_leaderboard/contributions/reproduceElemNet1/: default.nix  pyproject.toml  runpy.patch
